--- a/family-finance.html
+++ b/family-finance.html
@@ -535,7 +535,7 @@ img.emoji {
 <div class="wp-block-group block-box-level-1 investmens-slogans-block"><div class="wp-block-group__inner-container">
 <div class="wp-block-group block-box-level-2"><div class="wp-block-group__inner-container">
 <div class="investmens-slogans-questions">
-    <ul class="size-34 color-black">
+    <ul class="font-no-one size-34 color-black">
         <li>נמאס לך <span style="font-weight: bold; color: #122569;">שהוצאות גדולות</span> מהכנסות?</li>
         <li>לא מצליחים לנהל <span style="font-weight: bold; color: #122569;">תקציב משפחה</span> ולשלוט על הכסף?</li>
         <li>רוצים לעשות <span style="font-weight: bold; color: #122569;">סדר בפיננסים</span> של משפחה?</li>
