--- a/investmens.html
+++ b/investmens.html
@@ -664,7 +664,7 @@ img.emoji {
 <div class="wp-block-group block-box-level-1 investmens-slogans-block"><div class="wp-block-group__inner-container">
 <div class="wp-block-group block-box-level-2"><div class="wp-block-group__inner-container">
 <div class="investmens-slogans-questions">
-    <ul class="size-34 color-black">
+    <ul class="font-no-one size-34 color-black">
         <li>האם <span style="font-weight: bold; color: #122569;">נמאס</span> שתיק השקעות שלך בבנק משיג <span style="font-weight: bold; color: #122569;">תשואה צנועה</span> מאוד?</li>
         <li>האם&nbsp;<span style="font-weight: bold; color: #122569;">לא מסכימים</span> לתת לך ייעוץ השקעות מכיוון&nbsp;שתיק&nbsp; <span style="font-weight: bold; color: #122569;">פחות מ-300,000 ש”ח?</span></li>
         <li>האם <span style="font-weight: bold; color: #122569;">רוצה להשיג חופש כלכלי</span>&nbsp;אמיתי ולהפסיק לרוץ אחרי הזנב?</li>
