--- a/family-finance.html
+++ b/family-finance.html
@@ -791,6 +791,29 @@ img.emoji {
 </div></div>
 
 
+<div class="wp-block-group family-price block-box-level-1"><div class="wp-block-group__inner-container">
+	<div class="block-box-level-2 course-a-detailses investmens-price">
+	
+			<details>
+				<summary class="font-one color-blue size-60">עלות השירות (שכר טרחה) <span></span></summary>
+				<div class="font-no-one color-black size-29">
+					<p>כל החבילה ללא שלבים אופציונליים &#8212; 2,200 ₪.</p>
+					<p>שלב אופציונלי 1 – 1,500 ₪.</p>
+					<p>שלב אופציונלי 2 &#8212; 300 ₪.</p>
+				</div>
+			</details>
+	
+		</div>
+	
+	
+	
+	<div class="wp-block-buttons familyfin-we-help-buttons contact-buttons buttons-center">
+	<div class="wp-block-button familyfin-we-help-button contact-button"><a class="wp-block-button__link" href="http://dkotkin.com/contacts/"> קביעת פגישה </a></div>
+	</div>
+	</div></div>
+	
+
+
 
 <div class="wp-block-group block-box-level-1"><div class="wp-block-group__inner-container">
 <div class="home-calcs">
